--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./css/ styles.css">
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body class="text-body color-body">
     <header class="header-color">
         <nav>
             <a href="./index.html" class="logo-text logo-color">Web<span class="studio-color">Studio</span></a>
             <ul class="no-markers">
-                <li><a href="" class="link-color interactive no-underline body-medium">Studio</a></li>
+                <li><a href="./index.html" class="link-color interactive no-underline body-medium">Studio</a></li>
                 <li><a href="" class="link-color interactive no-underline body-medium">Portfolio</a></li>
                 <li><a href="" class="link-color interactive no-underline body-medium">Contacts</a></li>
             </ul>
@@ -32,7 +32,7 @@
         <section class="base-color">
             <h1 class="title-color text-center">Effective Solutions<br>
                 for Your Business</h1>
-            <button type="button" class="button-color active-button">Order Service</button>
+            <button type="button" class="button-color active-button button-text">Order Service</button>
         </section>
 
         <section>
